force-app/main/default/objects/OPD_Collection__c/OPD_Collection__c.object-meta.xml
<CustomObject>
    <label>OPD Collection</label>
    <nameField>
        <displayFormat>id-{00}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OPD Collection</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>