force-app/main/default/objects/OPD_Collection__c/fields/amount__c.field-meta.xml
<CustomField>
    <fullName>amount__c</fullName>
    <label>amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>