force-app/main/default/objects/OPD_Collection__c/fields/particular__c.field-meta.xml
<CustomField>
    <fullName>particular__c</fullName>
    <label>particular</label>
    <length>200</length>
    <type>Text</type>
</CustomField>