force-app/main/default/objects/OPD_Collection__c/fields/particularId__c.field-meta.xml
<CustomField>
    <fullName>particularId__c</fullName>
    <label>particularId</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>